@@ -49,29 +49,29 @@ describe Mail::Message do
     end
 
     it "should be able to parse a basic email" do
-      doing { Mail::Message.new(File.read(fixture('emails', 'plain_emails', 'basic_email.eml'))) }.should_not raise_error
+      doing { Mail.read(fixture('emails', 'plain_emails', 'basic_email.eml')) }.should_not raise_error
     end
 
     it "should be able to parse an email with @ in display name" do
-      message = Mail::Message.new(File.read(fixture('emails', 'plain_emails', 'raw_email_with_at_display_name.eml')))
+      message = Mail.read(fixture('emails', 'plain_emails', 'raw_email_with_at_display_name.eml'))
       message.to.should eq ["smith@gmail.com", "raasdnil@gmail.com", "tom@gmail.com"]
     end
 
     it "should be able to parse an email with only blank lines as body" do
-      doing { Mail::Message.new(File.read(fixture('emails', 'error_emails', 'missing_body.eml'))) }.should_not raise_error
+      doing { Mail.read(fixture('emails', 'error_emails', 'missing_body.eml')) }.should_not raise_error
     end
 
     it "should be able to parse an email with a funky date header" do
-      doing { Mail::Message.new(File.read(fixture('emails', 'error_emails', 'bad_date_header2.eml'))) }
+      doing { Mail.read(fixture('emails', 'error_emails', 'bad_date_header2.eml')) }
     end
 
     it 'should be able to invoke subject on a funky subject header' do
-      Mail::Message.new(File.read(fixture('emails', 'error_emails', 'bad_subject.eml'))).subject
+      Mail.read(fixture('emails', 'error_emails', 'bad_subject.eml')).subject
     end
 
 
     it 'should be able to parse an email missing an encoding' do
-      Mail::Message.new(File.read(fixture('emails', 'error_emails', 'must_supply_encoding.eml')))
+      Mail.read(fixture('emails', 'error_emails', 'must_supply_encoding.eml'))
     end
 
     it "should be able to parse every email example we have without raising an exception" do
@@ -82,7 +82,7 @@ describe Mail::Message do
       expected_failures = []
       emails.each do |email|
         begin
-          Mail::Message.new(File.read(email))
+          Mail.read(email)
         rescue => e
           unless expected_failures.include?(email)
             puts "Failed on email #{email}"
@@ -104,28 +104,28 @@ describe Mail::Message do
 
     it "should not raise a warning on having non US-ASCII characters in the header (should just handle it)" do
       STDERR.should_not_receive(:puts)
-      Mail::Message.new(File.read(fixture('emails', 'plain_emails', 'raw_email_string_in_date_field.eml')))
+      Mail.read(fixture('emails', 'plain_emails', 'raw_email_string_in_date_field.eml'))
     end
 
     it "should raise a warning (and keep parsing) on having an incorrectly formatted header" do
       STDERR.should_receive(:puts).with("WARNING: Could not parse (and so ignoring) 'quite Delivered-To: xxx@xxx.xxx'")
-      Mail::Message.new(File.read(fixture('emails', 'plain_emails', 'raw_email_incorrect_header.eml')))
+      Mail.read(fixture('emails', 'plain_emails', 'raw_email_incorrect_header.eml'))
     end
 
     it "should read in an email message and basically parse it" do
-      mail = Mail::Message.new(File.read(fixture('emails', 'plain_emails', 'basic_email.eml')))
+      mail = Mail.read(fixture('emails', 'plain_emails', 'basic_email.eml'))
       mail.to.should eq ["raasdnil@gmail.com"]
     end
 
     it "should not fail parsing message with caps in content_type" do
-      mail = Mail::Message.new(File.read(fixture('emails', 'plain_emails', 'mix_caps_content_type.eml')))
+      mail = Mail.read(fixture('emails', 'plain_emails', 'mix_caps_content_type.eml'))
       mail.content_type.should eq 'text/plain; charset=iso-8859-1'
       mail.main_type.should eq 'text'
       mail.sub_type.should eq 'plain'
     end
 
     it "should be able to pass an empty reply-to header" do
-      mail = Mail.new(File.read(fixture('emails', 'error_emails', 'empty_in_reply_to.eml')))
+      mail = Mail.read(fixture('emails', 'error_emails', 'empty_in_reply_to.eml'))
       mail.in_reply_to.should be_blank
     end
 
@@ -197,19 +197,19 @@ describe Mail::Message do
     end
 
     it "should strip off the envelope from field if present" do
-      message = Mail::Message.new(File.read(fixture('emails', 'plain_emails', 'raw_email.eml')))
+      message = Mail.read(fixture('emails', 'plain_emails', 'raw_email.eml'))
       message.envelope_from.should eq "jamis_buck@byu.edu"
       message.envelope_date.should eq ::DateTime.parse("Mon May  2 16:07:05 2005")
     end
 
     it "should strip off the envelope from field if present" do
-      message = Mail::Message.new(File.read(fixture('emails', 'plain_emails', 'raw_email.eml')))
+      message = Mail.read(fixture('emails', 'plain_emails', 'raw_email.eml'))
       message.raw_envelope.should eq "jamis_buck@byu.edu Mon May  2 16:07:05 2005"
       message.from.should eq ["jamis@37signals.com"]
     end
 
     it "should not cause any problems if there is no envelope from present" do
-      message = Mail::Message.new(File.read(fixture('emails', 'plain_emails', 'basic_email.eml')))
+      message = Mail.read(fixture('emails', 'plain_emails', 'basic_email.eml'))
       message.from.should eq ["test@lindsaar.net"]
     end
 
@@ -220,7 +220,7 @@ describe Mail::Message do
     end
 
     it "should handle a multipart message that has ^From in it" do
-      m = Mail::Message.new(File.read(fixture('emails', 'error_emails', 'cant_parse_from.eml')))
+      m = Mail.read(fixture('emails', 'error_emails', 'cant_parse_from.eml'))
       m.from.should_not be_nil
       m.from.should eq ["News@InsideApple.Apple.com"]
       m.should be_multipart
@@ -295,13 +295,13 @@ describe Mail::Message do
     end
 
     it "should read in an email message with the word 'From' in it multiple times and parse it" do
-      mail = Mail::Message.new(File.read(fixture('emails', 'mime_emails', 'two_from_in_message.eml')))
+      mail = Mail.read(fixture('emails', 'mime_emails', 'two_from_in_message.eml'))
       mail.to.should_not be_nil
       mail.to.should eq ["tester2@test.com"]
     end
 
     it "should parse non-UTF8 sources" do
-      mail = Mail::Message.new(File.read(fixture('emails', 'multi_charset', 'japanese_shiftjis.eml')))
+      mail = Mail.read(fixture('emails', 'multi_charset', 'japanese_shiftjis.eml'))
       mail.to.should eq ["raasdnil@gmail.com"]
       mail.decoded.should eq "すみません。"
     end
@@ -1611,7 +1611,7 @@ describe Mail::Message do
     describe "to a basic message" do
 
       before do
-        @mail = Mail::Message.new(File.read(fixture('emails', 'plain_emails', 'basic_email.eml')))
+        @mail = Mail.read(fixture('emails', 'plain_emails', 'basic_email.eml'))
       end
 
       it "should create a new message" do
@@ -1653,7 +1653,7 @@ describe Mail::Message do
     describe "to a message with an explicit reply-to address" do
 
       before do
-        @mail = Mail::Message.new(File.read(fixture('emails', 'rfc2822', 'example06.eml')))
+        @mail = Mail.read(fixture('emails', 'rfc2822', 'example06.eml'))
       end
 
       it "should be sent to the reply-to address" do
@@ -1665,7 +1665,7 @@ describe Mail::Message do
     describe "to a message with more than one recipient" do
 
       before do
-        @mail = Mail::Message.new(File.read(fixture('emails', 'rfc2822', 'example03.eml')))
+        @mail = Mail.read(fixture('emails', 'rfc2822', 'example03.eml'))
       end
 
       it "should be sent from the first to address" do
@@ -1677,7 +1677,7 @@ describe Mail::Message do
     describe "to a reply" do
 
       before do
-        @mail = Mail::Message.new(File.read(fixture('emails', 'plain_emails', 'raw_email_reply.eml')))
+        @mail = Mail.read(fixture('emails', 'plain_emails', 'raw_email_reply.eml'))
       end
 
       it "should be in-reply-to the original message" do
