@@ -30,6 +30,7 @@ end
 # NOTE: We set the KCODE manually here in 1.8.X because upgrading to rspec-2.8.0 caused it
 #       to default to "NONE" (Why!?).
 $KCODE='UTF8' if RUBY_VERSION < '1.9'
+Encoding.default_external = 'utf-8' if defined?(Encoding) && Encoding.respond_to?(:default_external=)
 
 def fixture(*name)
   File.join(SPEC_ROOT, 'fixtures', name)
