@@ -11,6 +11,7 @@ Performance:
 * Close pull request 488 - Speed up field construction & comparison (bpot)
 
 Bugs:
+* Fix up tests that depend on utf-8 external encoding; read fixtures as binary (jeremy)
 * Capture stderr from Sendmail and Exim deliveries (jeremy)
 * RFC2822 quoted_string content may be empty (jeremy)
 * Calling #to_s on a field with a nil value returns an empty string instead of nil (jeremy)
